--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.1.1' %}
+{% set version = '0.1.2' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -7,16 +7,15 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: widyr_{{ version }}.tar.gz
   url:
     - {{ cran_mirror }}/src/contrib/widyr_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/widyr/widyr_{{ version }}.tar.gz
-  sha256: 96b66ac6475c245d840c6738192a653270c9786a402973e2b0959e4870c42193
+  sha256: b216ee2044e1f6cdadfb4de71767ddab47b7907159d62e21dea222af0b4f1257
 
 build:
-  noarch: generic
   merge_build_host: True  # [win]
-  number: 1001
+  number: 0
+  noarch: generic
   rpaths:
     - lib/R/lib/
     - lib/
@@ -56,13 +55,31 @@ about:
     as co-occurrence counts, correlations, or clustering that are mathematically convenient
     on wide matrices.
   license_family: MIT
+  license_file:
+    - '{{ environ["PREFIX"] }}/lib/R/share/licenses/MIT'
+    - LICENSE
 
 extra:
   recipe-maintainers:
     - conda-forge/r
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
-    - cbrueffer
-    - dbast
+
+# Package: widyr
+# Type: Package
+# Title: Widen, Process, then Re-Tidy Data
+# Version: 0.1.2
+# Authors@R: c(person("David", "Robinson", email = "admiral.david@gmail.com", role = c("aut", "cre")), person("Kanishka", "Misra", role = "ctb"))
+# Description: Encapsulates the pattern of untidying data into a wide matrix, performing some processing, then turning it back into a tidy form. This is useful for several operations such as co-occurrence counts, correlations, or clustering that are mathematically convenient on wide matrices.
+# License: MIT + file LICENSE
+# LazyData: TRUE
+# Maintainer: David Robinson <admiral.david@gmail.com>
+# URL: http://github.com/dgrtwo/widyr
+# BugReports: http://github.com/dgrtwo/widyr/issues
+# VignetteBuilder: knitr
+# Imports: dplyr, tidyr, reshape2, tidytext, purrr, Matrix, broom
+# Suggests: ggraph, igraph, gapminder, testthat, covr, knitr, topicmodels, janeaustenr, rmarkdown, unvotes (>= 0.2.0), countrycode, fuzzyjoin, ggplot2, maps, irlba
+# RoxygenNote: 6.1.1
+# NeedsCompilation: no
+# Packaged: 2019-09-09 20:58:37 UTC; drobinson
+# Author: David Robinson [aut, cre], Kanishka Misra [ctb]
+# Repository: CRAN
+# Date/Publication: 2019-09-09 21:20:02 UTC
